Updating css for avoiding code wrap in code highlight

--- a/css/style.scss
+++ b/css/style.scss
@@ -675,6 +675,11 @@ ul {
 						font-size: 15px;
 					}
 				}
+
+				pre code {
+					white-space: pre;
+				}
+
 			}
 
 			p, ul, ol {
